@@ -1290,3 +1290,22 @@ Also defined by 'package2'
 > 
 > stopifnot(identical(genericExtraArg("foo", 1L), 1L))
 > 
+> ## callNextMethod() was broken for ... dispatch
+> f <- function(...) length(list(...))
+> setGeneric("f")
+[1] "f"
+> setMethod("f", "character", function(...){ callNextMethod() })
+[1] "f"
+> stopifnot(identical(f(1, 2, 3), 3L))
+> stopifnot(identical(f("a", "b", "c"), 3L))
+> 
+> ## ... dispatch was evaluating missing arguments in the generic frame
+> f <- function(x, ..., a = b) {
++     b <- "a"
++     a
++ }
+> setGeneric("f", signature = "...")
+[1] "f"
+> stopifnot(identical(f(a=1), 1))
+> stopifnot(identical(f(), "a"))
+> 
